fix(Album): wrap content

--- a/src/views/components/Albums/Album/album.scss
+++ b/src/views/components/Albums/Album/album.scss
@@ -38,6 +38,7 @@
     .album-content-container.mini {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
     }
 
     .album-content-container {
@@ -46,6 +47,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
 
             margin: $spacingMedium;
 
